# cabal2bazel

./: ChangeLog.md  README.md  WORKSPACE  cabal2bazel.cabal  stack.yaml
app/: Main.hs
bzl/: BUILD  README.md  action.bzl  alex.bzl  binary_with_runfiles.bzl  blazerc  c2hs.bzl  cabal_package.bzl  config.bzl  def.bzl  generate_core_libraries.bzl  hackage.bzl  happy.bzl  hsc2hs.bzl  metadata.bzl  paths.bzl  paths.template  providers.bzl  settings.bzl
bzl/cabal/: BUILD
bzl/cabal_package/: BUILD  cabal_paths.bzl  core_packages_list.bzl  forward_binary.bzl  overrides.bzl  paths.template  test.template
bzl/check_module_names/: BUILD  CheckModuleNames.hs  CheckModuleNamesTest.hs
bzl/g3doc/: BUILD  dynamic.md  generated_stardoc.bzl  profiling.md
bzl/private/: BUILD  action.bzl  archive.bzl  binary.bzl  cc.bzl  compile.bzl  compile_srcs_options.bzl  default_packages.bzl  ghc_options.bzl  info.bzl  library.bzl  link.bzl  module_names.bzl  package.bzl  proto_file.bzl  providers.bzl  runfiles.bzl  toolchains.bzl
bzl/private/cc_api_test/: BUILD  lib.cc  link.bzl
bzl/tests/attrs/: BUILD  DefaultOptions.hs  GhcOptsTest.hs  GhcRtsoptsTest.hs  LinkoptsTest.hs  LiterateHaskell.lhs  MainIs.hs  RunfilesLib.hs  RunfilesMain.hs  runfiles_c.h
bzl/tests/cabal_path/: BUILD  PathsTest.hs
bzl/tests/dep_on_haskell/: BUILD  CDep.hs  Lib.hs  cdep_test.cc  clib.c  test.cc
bzl/tests/dynamic/: BUILD  bin.cc  (+6 more)
bzl/tests/transitive_data/: BUILD  Provider.hs  TransitiveDataTest.hs  foo.cabal  package_description.bzl
bzl/tests/transitive_data/data/: cc_data.txt
rule_info/: BUILD
settings/: BUILD
src/Google/: Google3.hs
test/: ActionsTest.hs  BuildTest.hs  DownloadTest.hs  LicenseTest.hs
test/testdata/: BUILD  expected_package_description.bzl
test/testdata/awesome-1.2/: LICENSE  README.markdown  awesome.cabal
test_support/: BUILD
test_support/includes/: header_provider.h  hsc2hs_dep.h
(+125 files in other folders)
