Name:                foo
Version:             1
Synopsis:            Foo.
Description:         Fake description.
Homepage:            http://example.com/foo
License:             BSD3
License-file:        LICENSE
Author:              Foo
Maintainer:          haskell@google.com
Bug-reports:         http://bugs/
Category:            General
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1

data-dir:
  data
data-files:
  foo.txt

Library
  Default-language:  Haskell2010

  other-modules:
    Paths_foo
