Name:                awesome
Version:             1.2
Synopsis:            An awesome library.
Description:         Fake description.
                     Another description line.
		     .
		     New paragraph.
Homepage:            http://example.com/awesome
License:             BSD3
License-file:        LICENSE
Author:              John Doe
Maintainer:          user@example.org
Bug-reports:         http://bugs/
Category:            General
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1
Extra-source-files:  README.markdown

Source-repository head
  type:     git
  location: git://github.com/awesome/awesome.git

Flag flag1
  Description: Enable some flag
  Default: False
  Manual:  True

Flag flag2
  Description: Enable another flag
  Default: True
  Manual:  False

Library
  Build-depends:     array >= 1.3 && < 1.4,
                     containers >= 1.3 && < 1.4,
                     lens >= 1.3 && < 1.4

  if flag(flag1)
    Build-depends:   package1 >= 1.3 && < 1.4

  if flag(flag2)
    Build-depends:   package2 >= 1.3 && < 1.4

  Default-language:  Haskell2010
